--- a/app/views/root/top.html.slim
+++ b/app/views/root/top.html.slim
@@ -1,2 +1,3 @@
-h1 Root#top
-p Find me in app/views/root/top.html.slim
+= link_to "管理者ログイン", new_admin_session_path
+
+= link_to "ユーザーログイン", new_user_session_path
