making search js

--- a/app/views/root/top.html.slim
+++ b/app/views/root/top.html.slim
@@ -1,3 +1,5 @@
-= link_to "管理者ログイン", new_admin_session_path
+= link_to "管理者", new_admin_session_path
 
-= link_to "ユーザーログイン", new_user_session_path
+br
+
+= link_to "法人検索へ", '/search'
