--- a/app/views/users/registrations/new.html.slim
+++ b/app/views/users/registrations/new.html.slim
@@ -3,9 +3,13 @@ h2
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   = devise_error_messages!
   .field
+    = f.label :name
+    br
+    = f.text_field :name, autofocus: true
+  .field
     = f.label :email
     br
-    = f.email_field :email, autofocus: true
+    = f.email_field :email
   .field
     = f.label :password
     - if @minimum_password_length
@@ -19,6 +23,7 @@ h2
     = f.label :password_confirmation
     br
     = f.password_field :password_confirmation, autocomplete: "off"
+  = f.hidden_field :company_id, value: @company_id
   .actions
     = f.submit "Sign up"
 = render "users/shared/links"
