create main user

--- a/app/views/admins/companies/_company.html.slim
+++ b/app/views/admins/companies/_company.html.slim
@@ -1,2 +1,4 @@
-a href="/admins/companies/#{company.name}/surveys" =company.name
+= link_to "#{company.name}", admins_company_surveys_path(company.name)
+= link_to "編集", edit_admins_company_path(company.name)
+= link_to "削除", "/admins/companies/#{company.name}", method: :delete
 br
