correct create update

--- a/app/views/admins/companies/new.html.slim
+++ b/app/views/admins/companies/new.html.slim
@@ -4,7 +4,7 @@
     = f.text_field :name
   p.main-user
     | 代表者
-  = f.fields_for :users do |u|
+  = f.fields_for @user do |u|
     .field
       = u.label :name
       br
