--- a/app/views/admins/surveys/new.html.slim
+++ b/app/views/admins/surveys/new.html.slim
@@ -4,12 +4,9 @@ h1.form_message
   = form_with(model: [ :admins, @survey ], url: admins_surveys_path) do |f|
     .survey-content
       = f.text_field :name, placeholder: 'アンケートタイトル'
-    h3
-      | 質問
     .form.form-question
-      = f.fields_for :questions do |u|
-        / .question-content
-        /   = u.text_field :name, placeholder: "質問内容"
+      = f.fields_for @question do |u|
+        #question-field
         = u.select :status, Question.statuses.keys.to_a, {}
-        .add-question-button 質問追加
-      = f.submit "作成"
+        input#add-question-button type="button" value="質問追加"
+    = f.submit "作成"
