--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,6 +10,7 @@ html
     .logout
       - if user_signed_in?
         = link_to "ログアウト", destroy_user_session_path(current_user.company.name), method: :delete
+        = link_to "マイページへ", company_user_path(current_user.company.name, current_user)
       - if admin_signed_in?
         = link_to "ログアウト", destroy_admin_session_path, method: :delete
     = yield
