--- a/app/views/users/_user.html.slim
+++ b/app/views/users/_user.html.slim
@@ -1,3 +1,3 @@
-= link_to "#{user.name}", user_path(user)
+= link_to "#{user.name}", company_user_path(user.company.name, user)
 = link_to "削除", company_user_path(user.company.name, user), method: :delete
 br
