--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -4,11 +4,13 @@
 - else
   h1
     | #{@user.name}'s Page
-h3
-  | company: #{@user.company.name}
-h3
-  | username: #{@user.name}
-h3
-  | email: #{@user.email}
+.user-info
+  h3
+    | company: #{@user.company.name}
+  = image_tag @user.image.to_s
+  h3
+    | username: #{@user.name}
+  h3
+    | email: #{@user.email}
 - if current_user == @user
   = link_to "ユーザー情報編集", edit_user_registration_path(@user.company.name)
