--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,3 +1,7 @@
+.survey-index
+  = link_to company_surveys_path(current_user.company.name)
+    | アンケート一覧
+
 - if current_user == @user
   h1
     | My Page
@@ -14,3 +18,8 @@
     | email: #{@user.email}
 - if current_user == @user
   = link_to "ユーザー情報編集", edit_user_registration_path(@user.company.name)
+br
+- if current_user.main?
+  == render @users
+- else
+  = link_to "#{@user.company.main_user.name}", company_user_messages_path(@user.company.name, current_user)
