--- a/app/views/messages/index.html.slim
+++ b/app/views/messages/index.html.slim
@@ -4,7 +4,7 @@ ul.messages
 
   == render @messages
 
-= form_with(model: @message, url: company_user_messages_path(@message.user.company, @message.user),
+= form_with(model: @message, url: company_user_messages_path(@user.company.name, @user),
    html: { id: "new_message" }) do |f|
   #form_message
     = f.text_field :body, row: "1", placeholder: "type a message"
