edit message table

--- a/app/views/messages/_message.html.slim
+++ b/app/views/messages/_message.html.slim
@@ -1,19 +1,23 @@
 li.message
   - if message.sender_id == current_user.id
     .sender_message_content
-    = message.sender.name
-    br
-    = message.time
-    br
-    = message.body
-    - if message.image.present?
-      = image_tag(message.image.to_s)
+      = sender_name(message)
+      br
+      = time(message)
+      br
+      - if message.message_text.present?
+        = message.message_text.body
+        br
+      - if message.message_image.present?
+        = image_tag(message.message_image.body.to_s)
   - else
     .recipient_message.content
-      = message.sender.name
+      = sender_name(message)
       br
-      = message.time
+      = time(message)
       br
-      = message.body
-      - if message.image.present?
-        = image_tag(message.image.to_s)
+      - if message.message_text.present?
+        = message.message_text.body
+        br
+      - if message.message_image.present?
+        = image_tag(message.message_image.body.to_s)
