--- a/app/views/surveys/answer_new.html.slim
+++ b/app/views/surveys/answer_new.html.slim
@@ -1,3 +1,21 @@
 h2
   | #{@survey.name}
-== render @questions
+= form_with(model: @answers_text, url: answer_create_company_survey_path(current_user.company.name, @survey)) do |f|
+  - @questions.each do |question|
+    h5
+      | #{question.name}
+    - if question.status == 'text_field'
+      = f.fields_for :answer_text, index: question.id do |t|
+        = t.text_field :text
+    - elsif question.status == 'textarea'
+      = f.fields_for :answer_text, index: question.id do |t|
+        = t.text_area :text
+    - else
+      = f.fields_for @answer_choice, index: question.id do |c|
+        - if question.status == 'radio_button'
+          = c.collection_radio_buttons :question_choice_id, question.question_choices, :id, :text
+        - else
+          = c.collection_check_boxes :question_choice_id, question.question_choices, :id, :text, include_hidden: false
+    br
+  = f.submit '一時保存', name: 'yet'
+  = f.submit '回答', name: 'done', data: {confirm: "今後回答は編集できませんがよろしいですか？"}
