--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -8,7 +8,7 @@
           span class="icon-bar"
           span class="icon-bar"
           span class="icon-bar"
-        a.navbar-brand href="#"
+        a.navbar-brand href="/"
           | Survay Company
       .collapse.navbar-collapse id="navbar"
         ul.nav.navbar-nav
