--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,3 +15,11 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+.header {
+  @include clearfix;
+}
+
+.navbar {
+  margin-bottom: 0px;
+}
