--- a/app/assets/stylesheets/module/user.scss
+++ b/app/assets/stylesheets/module/user.scss
@@ -1,35 +1,63 @@
-.user-info {
-  height: 150px;
-  &-image {
-    height: 100%;
-    width: 400px;
-    padding: 25px 150px;
-    float: left;
-    img.user-img {
-      border-radius: 50%;
-      width:  100px;
-      height: 100px;
+html, body {
+  height: 100%;
+}
+
+.main {
+  height: calc(100% - 50px);
+  .user-info {
+    height: 150px;
+    &-image {
+      height: 100%;
+      width: 400px;
+      padding: 25px 150px;
+      float: left;
+      img.user-img {
+        border-radius: 50%;
+        width:  100px;
+        height: 100px;
+      }
+    }
+    &-maininfo {
+      height: 100%;
+      width: calc(100% - 800px);
+      padding: 0px;
+      float: left;
+    }
+    &-edit {
+      height: 100%;
+      width: 400px;
+      float: left;
+      padding: 58px;
+      a {
+        display:inline-block;
+        float: right;
+        line-height: 40px;
+        color: #38aeF0;
+        padding: 0 20px;
+        border: 2px solid;
+        font-size: 14px;
+      }
     }
   }
-  &-maininfo {
-    height: 100%;
-    width: calc(100% - 800px);
-    padding: 0px;
+  .user-recipient {
+    overflow: auto;
+    height: calc(100% - 150px);
+    width: 300px;
     float: left;
-  }
-  &-edit {
-    height: 100%;
-    width: 400px;
-    float: left;
-    padding: 58px;
-    a {
-      display:inline-block;
-      float: right;
-      line-height: 40px;
-      color: #38aeF0;
-      padding: 0 20px;
-      border: 2px solid;
-      font-size: 14px;
+    li {
+      border: 1px solid;
+      padding: 0 110px;
+      .chat_link {
+        display: block;
+        padding: 20px 0;
+      }
     }
+    li:hover {
+      background-color: #E6E6FA
+    }
+  }
+  .user-message {
+    height: calc(100% - 300px);
+    overflow: auto;
   }
 }
