--- a/app/views/messages/index.html.slim
+++ b/app/views/messages/index.html.slim
@@ -1,11 +1,14 @@
-.message
-ul.messages
-  == render @messages
-= form_with(model: @message, url: company_user_messages_path(@user.company.name, @user),
-   html: { id: "new_message" }) do |f|
-  #form_message
-    = f.text_field :text, row: "1", placeholder: "type a message"
-    br
-    = f.label class:"photo"
-      = f.file_field :image
-  = f.submit "Send", class: "send-btn"
+.main
+  == render 'users/info'
+  == render 'users/sidebar'
+  .user-message
+    ul.messages
+      == render @messages
+  = form_with(model: @message, url: company_user_messages_path(@user.company.name, @user),
+     html: { id: "new_message" }) do |f|
+    #form_message
+      = f.text_field :text, row: "1", placeholder: "type a message"
+      br
+      = f.label class:"photo"
+        = f.file_field :image
+    = f.submit "Send", class: "send-btn"
