--- a/app/views/users/_sidebar.html.slim
+++ b/app/views/users/_sidebar.html.slim
@@ -3,4 +3,4 @@
     - if current_user.main?
       == render @users
     - else
-      = link_to "#{@user.company.main_user.name}", company_user_messages_path(@user.company.name, current_user), class: "chat_link", 'data-turbolinks': false
+       li = link_to "#{@user.company.main_user.name}", company_user_messages_path(@user.company.name, current_user), class: "chat_link", 'data-turbolinks': false
