--- a/app/assets/stylesheets/module/user.scss
+++ b/app/assets/stylesheets/module/user.scss
@@ -1,3 +1,5 @@
+@import "mixin/clearfix";
+
 html, body {
   height: 100%;
 }
@@ -57,7 +59,24 @@ html, body {
     }
   }
   .user-message {
-    height: calc(100% - 300px);
+    padding: 0 50px;
+    height: calc(100% - 250px);
     overflow: auto;
+    .sender_message_content {
+      span.name {
+        color: red;
+      }
+    }
+  }
+  input[type="text"] {
+    width: 700px;
+    line-height: 20px;
+    height: 50px;
+    padding: 15px 10px;
+    display: block;
+    float: left;
+  }
+  input[type="submit"] {
+    position: absolute;
   }
 }
