--- a/app/views/messages/index.html.slim
+++ b/app/views/messages/index.html.slim
@@ -9,6 +9,6 @@
     #form_message
       = f.text_field :text, row: "1", placeholder: "type a message"
       br
-      = f.label class:"photo"
+      = f.label class: "photo"
         = f.file_field :image
-    = f.submit "Send", class: "send-btn"
+      = f.submit "Send", class: 'btn btn-default btn-primary'
