--- a/app/views/users/_info.html.slim
+++ b/app/views/users/_info.html.slim
@@ -10,4 +10,4 @@
     h3
       | email: #{current_user.email}
   .user-info-edit
-    = link_to "ユーザー情報編集", edit_user_registration_path(current_user.company.name)
+    = link_to "ユーザー情報編集", edit_user_registration_path(current_user.company.name), class: 'panel'
