--- a/app/views/surveys/answer_edit.html.slim
+++ b/app/views/surveys/answer_edit.html.slim
@@ -1,25 +1,29 @@
-h2
-  | #{@survey.name}
-= form_with(model: @answers_text, url: answer_update_company_survey_path(current_user.company.name, @survey), method: :patch) do |f|
-  - @questions.each do |question|
-    h5
-      | #{question.name}
-    - if question.status == 'text_field'
-      = f.fields_for :answer_text, index: question.id do |t|
-        = t.text_field :text, name: "answer_text[][text]"
-        = t.hidden_field :question_id, value: question.id, name: "answer_text[][question_id]"
-    - elsif question.status == 'textarea'
-      = f.fields_for :answer_text, index: question.id do |t|
-        = t.text_area :text, name: "answer_text[][text]"
-        = t.hidden_field :question_id, value: question.id, name: "answer_text[][question_id]"
-    - else
-      = f.fields_for @answer_choice, index: question.id do |c|
-        - if question.status == 'radio_button'
-          = c.collection_radio_buttons :question_choice_id, question.question_choices, :id, :text
-          = c.hidden_field :question_id, value: question.id, name: "answer_choice[#{question.id}][question_id]"
+h2 #{@survey.name}
+hr.line2
+.row
+  .col-md-3
+    = form_with(model: @answers_text, url: answer_update_company_survey_path(current_user.company.name, @survey), method: :patch) do |f|
+      - @questions.each do |question|
+        h5 #{question.name}
+        - if question.status == 'text_field'
+          = f.fields_for :answer_text, index: question.id do |t|
+            .field.col-md-12.form-group
+              = t.text_field :text, name: "answer_text[][text]", class: 'form-control'
+              = t.hidden_field :question_id, value: question.id, name: "answer_text[][question_id]"
+        - elsif question.status == 'textarea'
+          = f.fields_for :answer_text, index: question.id do |t|
+            .field.col-md-12.form-group
+              = t.text_area :text, name: "answer_text[][text]", class: 'form-control'
+              = t.hidden_field :question_id, value: question.id, name: "answer_text[][question_id]"
         - else
-          = c.collection_check_boxes :question_choice_id, question.question_choices, :id, :text, include_hidden: false
-          = c.hidden_field :question_id, value: question.id, name: "answer_choice[#{question.id}][question_id]"
-    br
-  = f.submit '一時保存', name: 'yet'
-  = f.submit '回答', name: 'done', data: {confirm: "今後回答は編集できませんがよろしいですか？"}
+          = f.fields_for @answer_choice, index: question.id do |c|
+            - if question.status == 'radio_button'
+              .field.col-md-12.form-group
+                = c.collection_radio_buttons :question_choice_id, question.question_choices, :id, :text
+                = c.hidden_field :question_id, value: question.id, name: "answer_choice[#{question.id}][question_id]"
+            - else
+              .field.col-md-12.form-group
+                = c.collection_check_boxes :question_choice_id, question.question_choices, :id, :text, include_hidden: false
+                = c.hidden_field :question_id, value: question.id, name: "answer_choice[#{question.id}][question_id]"
+      = f.submit '一時保存', name: 'yet', class: 'btn btn-primary'
+      = f.submit '回答', name: 'done', class: 'btn btn-primary', data: {confirm: "今後回答は編集できませんがよろしいですか？"}
