--- a/app/views/users/registrations/edit.html.slim
+++ b/app/views/users/registrations/edit.html.slim
@@ -1,46 +1,32 @@
-h2
-  | Edit 
-  = resource_name.to_s.humanize
-= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :name
-    br
-    = f.text_field :name, autofocus: true
-  .field
-    = f.label :email
-    br
-    = f.email_field :email
-  .field
-    = f.label :image
-    br
-    = f.file_field :image
-  .field
-    = f.label :password
-    i
-      | (leave blank if you don't want to change it)
-    br
-    = f.password_field :password, autocomplete: "off"
-    - if @minimum_password_length
-      br
-      em
-        = @minimum_password_length
-        |  characters minimum
-  .field
-    = f.label :password_confirmation
-    br
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .field
-    = f.label :current_password
-    i
-      | (we need your current password to confirm your changes)
-    br
-    = f.password_field :current_password, autocomplete: "off"
-  .actions
-    = f.submit "Update"
-h3
-  | Cancel my account
-p
-  | Unhappy? 
-  = button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete
-= link_to "Back", :back
+h1 ユーザー情報編集
+hr.line2
+.row
+  .col-md-3
+    = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+      = devise_error_messages!
+      .field.col-md-12.form-group
+        = f.label :名前
+        br
+        = f.text_field :name, autofocus: true, class: 'form-control'
+      .field.col-md-12.form-group
+        = f.label :email
+        br
+        = f.email_field :email, class: 'form-control'
+      .field.col-md-12.form-group
+        = f.label :プロフィール写真
+        br
+        = f.file_field :image
+      .field.col-md-12.form-group
+        = f.label :パスワード
+        br
+        = f.password_field :password, autocomplete: "off", class: 'form-control'
+      .field.col-md-12.form-group
+        = f.label :パスワード確認
+        br
+        = f.password_field :password_confirmation, autocomplete: "off", class: 'form-control'
+      .field.col-md-12.form-group
+        = f.label :現在のパスワード
+        br
+        = f.password_field :current_password, autocomplete: "off", class: 'form-control'
+      .actions
+        = f.submit "更新", class: 'btn btn-primary'
