--- a/app/views/users/registrations/new.html.slim
+++ b/app/views/users/registrations/new.html.slim
@@ -1,29 +1,31 @@
-h2
-  | Sign up
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :name
-    br
-    = f.text_field :name, autofocus: true
-  .field
-    = f.label :email
-    br
-    = f.email_field :email
-  .field
-    = f.label :password
-    - if @minimum_password_length
-      em
-        | (
-        = @minimum_password_length
-        |  characters minimum)
-    br
-    = f.password_field :password, autocomplete: "off"
-  .field
-    = f.label :password_confirmation
-    br
-    = f.password_field :password_confirmation, autocomplete: "off"
-  = f.hidden_field :company_id, value: @company_id
-  .actions
-    = f.submit "Sign up"
-= render "users/shared/links"
+h1 新規登録
+= link_to 'ログイン画面へ', new_session_path(resource_name), class: 'btn btn-default'
+hr.line2
+.row
+  .col-md-3
+    = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+      = devise_error_messages!
+      .field.col-md-12.form-group
+        = f.label :名前
+        br
+        = f.text_field :name, autofocus: true, class: 'form-control'
+      .field.col-md-12.form-group
+        = f.label :email
+        br
+        = f.email_field :email, class: 'form-control'
+      .field.col-md-12.form-group
+        = f.label :パスワード
+        - if @minimum_password_length
+          em
+            | (
+            = @minimum_password_length
+            |  文字以上)
+        br
+        = f.password_field :password, autocomplete: "off", class: 'form-control'
+      .field.col-md-12.form-group
+        = f.label :パスワード確認
+        br
+        = f.password_field :password_confirmation, autocomplete: "off", class: 'form-control'
+      = f.hidden_field :company_id, value: @company_id
+      .actions
+        = f.submit "新規登録", class: 'btn btn-primary'
