--- a/app/views/surveys/show.html.slim
+++ b/app/views/surveys/show.html.slim
@@ -1,3 +1,7 @@
 h2
   | アンケート結果
-== render @questions
+hr
+  .panel.panel-default.panel-info
+    .panel-heading
+      = @survey.name
+  == render @questions
