--- a/app/views/admins/surveys/_survey.html.slim
+++ b/app/views/admins/surveys/_survey.html.slim
@@ -1,4 +1,7 @@
-h5
-  | #{survey.name}
-= link_to "削除", admins_survey_path(survey), method: :delete
-br
+tr
+  th.scope-row scope="row"
+  td = survey.name
+  td
+    = "#{done_user(survey, @company)}/#{@company.users.length}人"
+  td
+    = link_to "結果", admins_company_survey_path(@company.name, survey.id)
