--- a/app/views/admins/surveys/index.html.slim
+++ b/app/views/admins/surveys/index.html.slim
@@ -1,3 +1,14 @@
-== render @surveys
-
-= paginate(@surveys)
+.surveys.panel.panel-default
+  .panel-body
+    h2.sub-title
+      | アンケート一覧
+  table.table.table-striped
+    thead
+      tr
+      th
+      th アンケート名
+      th 回答者数(社内)
+      th
+    tbody
+      == render @surveys
+  = paginate(@surveys)
